# iquana-toolbox

./: README.md  pyproject.toml
src/iquana_toolbox/: caches.py
src/iquana_toolbox/schemas/: annotation_session.py  contour_hierarchy.py  contours.py  image.py  masks.py  models.py  prompts.py  service_requests.py  training.py
src/schemas/: annotation_session.py  caches.py  contour_hierarchy.py  contours.py  dataset.py  image.py  labels.py  masks.py  models.py  prompts.py  quantification.py  scale.py  service_requests.py  training.py  user.py
src/schemas/completion_segmentation/: inference.py
src/schemas/prompted_segmentation/: segmentations.py
src/schemas/semantic_segmentation/: training.py
