[project]
name = "iquana-toolbox"
version = "0.1.0"
description = "This repository contains common functionality in the IQUANA tool. It defines pydantic schemas, as well as common methods."
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "opencv-python",
    "pycocotools",
    "pydantic",
    "scipy",
    "scipy-stubs",
]
